fix: change img

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -113,12 +113,24 @@
                             renovation</button>
                     </div>
                     <div class="container__portfolio_cards">
-                        <img src="../assets/images/int_recovery/1.jpg" alt="photo" class="portfolio__card">
-                        <img src="../assets/images/int_recovery/2.jpg" alt="photo" class="portfolio__card">
-                        <img src="../assets/images/int_recovery/3.jpg" alt="photo" class="portfolio__card">
-                        <img src="../assets/images/int_recovery/4.jpg" alt="photo" class="portfolio__card">
-                        <img src="../assets/images/int_recovery/5.jpg" alt="photo" class="portfolio__card">
-                        <img src="../assets/images/int_recovery/6.jpg" alt="photo" class="portfolio__card">
+                        <figure class="portfolio__card">
+                            <img class="portfolio__card_img" src="../assets/images/int_recovery/1.jpg" alt="photo">
+                        </figure>
+                        <figure class="portfolio__card">
+                            <img class="portfolio__card_img" src="../assets/images/int_recovery/2.jpg" alt="photo">
+                        </figure>
+                        <figure class="portfolio__card">
+                            <img class="portfolio__card_img" src="../assets/images/int_recovery/3.jpg" alt="photo">
+                        </figure>
+                        <figure class="portfolio__card">
+                            <img class="portfolio__card_img" src="../assets/images/int_recovery/4.jpg" alt="photo">
+                        </figure>
+                        <figure class="portfolio__card">
+                            <img class="portfolio__card_img" src="../assets/images/int_recovery/5.jpg" alt="photo">
+                        </figure>
+                        <figure class="portfolio__card">
+                            <img class="portfolio__card_img" src="../assets/images/int_recovery/6.jpg" alt="photo">
+                        </figure>                                           
                     </div>
                 </section>
                 <section class="steps_container">
