fix: correct style for big scren

--- a/pages/privacy_policy.html
+++ b/pages/privacy_policy.html
@@ -42,7 +42,7 @@
     </header>
     <main class="main">
         <div class="wrapper">
-            <div class="container_page margin_bottom_100">
+            <div class="container_page">
                 <h5 class="title_policy_pages">ArtHome Privacy Policy </h5>
                 <p class="text_policy">At ArtHome, accessible from artHome@yandex.ru, one of our main priorities is the privacy of our visitors.This Privacy Policy document contains types of information that is collected and recorded by ArtHome and how we use it.</p>
 
